tests/machine/x/php/string_in_operator.php
<?php
$s = "catch";
_print(in_array("cat", $s));
_print(in_array("dog", $s));
function _print(...$args) {
    $parts = [];
    foreach ($args as $a) {
        if (is_array($a) || is_object($a)) {
            $parts[] = json_encode($a);
        } else {
            $parts[] = strval($a);
        }
    }
    echo implode(' ', $parts), PHP_EOL;
}
